优化线程代码